--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.28"
     },
     "require-dev": {
