--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
-        "phpoffice/phpspreadsheet": "^1.28"
+        "phpoffice/phpspreadsheet": "^1.28",
+        "simplesoftwareio/simple-qrcode": "^2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
