--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "html2text/html2text": "^4.3",
         "jeroennoten/laravel-adminlte": "^3.9",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
@@ -15,6 +16,7 @@
         "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.28",
+        "phpoffice/phpword": "^1.2",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
