--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.28",
         "phpoffice/phpword": "^1.2",
+        "pion/laravel-chunk-upload": "^1.5",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
