--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
-        "guzzlehttp/guzzle": "^7.2",
         "html2text/html2text": "^4.3",
+        "http-interop/http-factory-guzzle": "^1.2",
         "jeroennoten/laravel-adminlte": "^3.9",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.11",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
+        "meilisearch/meilisearch-php": "^1.10",
         "phpoffice/phpspreadsheet": "^1.28",
         "phpoffice/phpword": "^1.2",
         "pion/laravel-chunk-upload": "^1.5",
