--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
+/vendor/*
+!/var/www/html/Sigmel/vendor/jeroennoten/**
 .env
 .env.backup
 .env.production
